Browser selection works. Randomly selects a browser from mobile, mac, and windows categories. Currently outputs to command line for testing purposes.

--- a/TestPage.html
+++ b/TestPage.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Page</title>
+    <title>Take Home Test</title>
 </head>
 <body>
-    <div>This is a test page</div>
+    <h1>This is a test page</h1>
 </body>
 </html>
